Fix dark mode styles #1123 (#1334)
* Fix #1123

Add selector for ListWidget styles in dark mode.

* Fix label style for ListWidget

--- a/src/Resources/laravel-debugbar-dark-mode.css
+++ b/src/Resources/laravel-debugbar-dark-mode.css
@@ -24,6 +24,8 @@ div.phpdebugbar-openhandler,
 div.phpdebugbar div.phpdebugbar-header > div > *,
 div.phpdebugbar ul.phpdebugbar-widgets-timeline li span.phpdebugbar-widgets-label,
 div.phpdebugbar ul.phpdebugbar-widgets-timeline li span.phpdebugbar-widgets-collector,
+div.phpdebugbar ul.phpdebugbar-widgets-list li.phpdebugbar-widgets-list-item,
+div.phpdebugbar ul.phpdebugbar-widgets-list li span.phpdebugbar-widgets-label,
 div.phpdebugbar code.phpdebugbar-widgets-sql span.hljs-keyword,
 div.phpdebugbar-openhandler .phpdebugbar-openhandler-header,
 div.phpdebugbar-openhandler .phpdebugbar-openhandler-header a {
